Closed Bug 1616590 Opened 6 years ago Closed 6 years ago

[Waylan] Fix GL compositor to composite correctly NV12 textures generated by ffmpeg

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox75 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Recently AFAIK NV12 textures are used on Mac only. We need to update GL composior to work also on Wayland with NV12 textures generated by ffmpeg/libva.

Blocks: egl-linux-vaapi
No longer blocks: 1616185
  • Enable GL_TEXTURE_RECTANGLE_ARB only when the extension is supported
  • Switch Green and Alpha colors in NV12 shader when compositing on Wayland. Is's because vaExportSurfaceHandle()
    exports UV plane in DRM_FORMAT_GR88 format so we have to use R and G channels and not R and A as we have now.
Pushed by rmaries@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/4941724be9c2 [Wayland] Fix GL compositor to composite correctly NV12 textures generated by ffmpeg, r=sotaro
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: