Bug 1616590 [Wayland] Fix GL compositor to composite correctly NV12 textures generated by ffmpeg, r=sotaro

- Enable GL_TEXTURE_RECTANGLE_ARB only when the extension is supported
- Switch Green and Alpha colors in NV12 shader when compositing on Wayland. Is's because vaExportSurfaceHandle() exports UV plane in DRM_FORMAT_GR88 format so we have to use R and G channels and not R and A as we have now.

Differential Revision: https://phabricator.services.mozilla.com/D63349